--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
     text-transform: uppercase;
     color: rgba(86, 88, 96, 1);
     padding-bottom: 16px;
+    padding-top: 24px;
 }
 
 .section-header-name {
