--- a/index.css
+++ b/index.css
@@ -16,8 +16,11 @@ body {
     text-align: center;
     text-transform: uppercase;
     color: rgba(86, 88, 96, 1);
-    padding-bottom: 16px;
-    padding-top: 24px;
+    /* padding-bottom: 16px; */
+}
+
+.section-header {
+    padding: 24px 0 16px 0;
 }
 
 .section-header-name {
